# smar-mcp-fork

./: .gitignore  package.json
.cortex/skills/smartsheet-mcp-dev/: skill.md
.cortex/skills/smartsheet-mcp-setup/: skill.md
.cortex/skills/smartsheet-mcp-usage/: skill.md
cli/: .env.example  pyproject.toml  smar_cli.py
src/apis/: smartsheet-api.ts
src/tools/: smartsheet-sheet-tools.ts
